# 1.2-Simple-LLM-LCEL-APP

./: README.md  pyproject.toml  requirements.txt  serve.py  simpleLLMLCEL.ipynb
