[tool.poetry]
name = "simple llm app"
version = "1.1.0"
description = "Translator English to French"
authors = ["Muhammad Awais"]
license = "MA-1.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
